basic seite für gedanken erfassen

--- a/src/main/resources/META-INF/resources/basicLayout.xhtml
+++ b/src/main/resources/META-INF/resources/basicLayout.xhtml
@@ -6,15 +6,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
 	<h:head>
-		<!-- IE 11 Fix wenn office.dir URLs benutzt werden. IE wechselt sonst zu IE7 Kompabilitätsmodus -->
-		<f:facet name="first">
-			<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-		</f:facet>
-		<title>Projekt Peter</title>
-		<!-- <h:outputStylesheet library="css" name="style-primefaces.css"/> -->
-		<!-- <h:outputStylesheet library="css" name="style.css" /> -->
-		<!-- <h:outputStylesheet library="css" name="normalize.css" /> -->
-		<!-- <h:outputScript library="js" name="de.js" /> -->
+		<title>Workstreams</title>
 	</h:head>
 
 	<h:body>
@@ -25,5 +17,4 @@
 			<ui:insert name="content" />
 		</h:form>
 	</h:body>
-
 </html>
